--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html> <!-- declare that this document is an HTML doc -->
 <html>
 <head>
-	<title>PIXAR ART CONCEPT NEW</title> <!-- text in the website tab -->
+	<title>NEW PIXAR ART CONCEPT</title> <!-- text in the website tab -->
 	<!-- link our CSS file with our HTML file -->
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<!-- from Google fonts -->
